# actxpspy

./: .gitignore  .nojekyll  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  README.qmd  _README_body.qmd  changelog.html  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: ci-cd.yml  quarto-publish.yml
actxps/: __init__.py  col_select.py  datasets.py  dates.py  exp_shiny.py  exp_stats.py  expose.py  expose_split.py  pol_yr.py  tools.py  trx_stats.py
actxps/data/: account_vals  agg_sim_dat  census_dat  create_data.py  toy_census.csv  withdrawals
actxps/tests/: test_dates.py  test_expose.py  test_plots.py  test_pol_yr.py  test_tables.py  test_transactions.py
actxpspy/: __init__.py  datasets.py  pol_yr.py
actxpspy/data/: create_data.py  toy_census.csv
actxpspy/tests/: test_pol_yr.py
articles/: actxps.html  exp_summary.html  exposures.html  index.html  intro.html  misc.html  transactions.html  visualizations.html
docs/: .gitignore  Makefile  _quarto.yml  changelog.qmd  conf.py  example.ipynb  index.md  index.qmd  make.bat
docs/articles/: actxps.qmd  exp_summary.qmd  exposures.qmd  misc.qmd  transactions.qmd  visualizations.qmd
reference/: ExpStats.html  ExposedDF.add_transactions.html  ExposedDF.exp_stats.html  ExposedDF.expose_cm.html  ExposedDF.expose_cq.html  ExposedDF.expose_cw.html  ExposedDF.expose_cy.html  ExposedDF.expose_pm.html  ExposedDF.expose_pq.html  ExposedDF.expose_pw.html  ExposedDF.expose_py.html  ExposedDF.from_DataFrame.html  ExposedDF.html  SplitExposedDF.html  TrxStats.html  add_durations.html  dates.html  exp_shiny.html  exp_stats.html  expose.ExposedDF.groupby.html  expose.ExposedDF.html  expose.html  frac_durations.html  index.html  load_account_vals.html  load_census_dat.html  load_qx_iamb.html  load_scale_g2.html  load_toy_census.html  load_withdrawals.html  pol_durations.html  pol_interval.html  pol_mth.html  pol_qtr.html  pol_wk.html  pol_yr.html  qx_iamb.html  sim_data.html  tools.html
tests/: test_dates.py  test_exp_stats.py  test_expose.py  test_plots.py  test_tables.py  test_tools.py  test_transactions.py  test_trx_stats.py
