[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actxpspy"
version = "0.0.0.9000"
authors = [
  { name="Matt Heaphy", email="mattrmattrs@gmail.com" },
]
description = "Create Actuarial Experience Studies: Prepare Data, Summarize Results, and Create Reports"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas"
]

[tool.setuptools.packages]
find = {}

[project.urls]
"Homepage" = "https://github.com/mattheaphy/actxpspy"
"Bug Tracker" = "https://github.com/mattheaphy/actxpspy/issues"
# "Documentation" = #TODO