[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "actxps"
version = "0.0.0.9000"
authors = [
  { name="Matt Heaphy", email="mattrmattrs@gmail.com" },
]
description = "Create Actuarial Experience Studies: Prepare Data, Summarize Results, and Create Reports"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "plotnine",
    "joblib",
    "scipy",
    "matplotlib"
]
[project.optional-dependencies]
["shiny"]

[tool.setuptools.packages]
find = {}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
actxps = ["data/*"]

[project.urls]
"Repository" = "https://github.com/mattheaphy/actxpspy"
"Bug Tracker" = "https://github.com/mattheaphy/actxpspy/issues"
# "Documentation" = #TODO