[tool.poetry]
name = "actxps"
version = "0.0.0.9000"
description = "Create Actuarial Experience Studies: Prepare Data, Summarize Results, and Create Reports"
authors = [
  "Matt Heaphy <mattrmattrs@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mattheaphy/actxpspy"
documentation = "https://mattheaphy.github.io/actxpspy"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.26.2"
pandas = ">=2.1.4"
plotnine = ">=0.12.4"
joblib = ">=1.3.2"
scipy = ">=1.11.4"
matplotlib = ">=3.8.2"
shiny = ">=0.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
jupyter = ">=1.0.0"
quartodoc = ">=0.7.2"
quarto = ">=0.1.0"

[tool.semantic_release]
version_variable = "pyproject.toml:vwersion" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mattheaphy/actxpspy/issues"